--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,13 @@
-fastapi
-uvicorn
-scapy
-websockets
+fastapi>=0.68.0
+uvicorn>=0.15.0
+scapy>=2.4.5
+websockets>=10.0
+numpy>=1.21.0
+pandas>=1.3.0
+scikit-learn>=0.24.2
+sqlalchemy>=1.4.0
+psycopg2-binary>=2.9.1
+python-dotenv>=0.19.0
+pydantic>=1.8.2
+prometheus-client>=0.11.0
+pyshark>=0.4.3
