--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,17 @@
     "@mui/material": "^5.17.1",
     "@mui/x-data-grid": "^8.4.0",
     "@tanstack/react-query": "^4.29.0",
+    "@types/lodash": "^4.17.17",
+    "@types/react-virtualized-auto-sizer": "^1.0.4",
+    "@types/react-window": "^1.8.8",
     "axios": "^1.9.0",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-force-graph": "^1.44.3",
     "react-router-dom": "^6.10.0",
+    "react-virtualized-auto-sizer": "^1.0.26",
+    "react-window": "^1.8.11",
     "recharts": "^2.15.3",
     "websocket": "^1.0.34",
     "zustand": "^4.3.0"
